--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
-    "globals": "^15.0.0"
+    "globals": "^15.0.0",
+    "react-app-rewired": "^2.2.1",
+    "wasm-loader": "^1.3.0"
   }
 }
